# MultDim_Filteration

./: .gitignore  .vimrc  CMakeLists.txt  README.md  build.sh
inc/: .Signal.h.swp  Signal.h
libs/Picture/: CMakeLists.txt  main.cpp
libs/Picture/inc/: .Picture.h.swp  Picture.h
libs/Picture/src/: .Picture.cpp.swp  main.cpp
libs/Signal/: CMakeLists.txt  main.cpp
libs/Signal/inc/: .Signal.h.swp  Signal.h
libs/Signal/src/: .RealSignal.cpp.swp  .Signal.cpp.swp  .SignalFunctions.cpp.swp  GaussSignal.cpp  RealSignal.cpp  RealSignal.cpp.save  Signal.cpp  SignalFunctions.cpp  TestSignal.cpp
src/: .SignalFunctions.cpp.swp  .TestSignal.cpp.swp  .main.cpp.swo  .main.cpp.swp  GaussSignal.cpp  RealSignal.cpp  Signal.cpp  SignalFunctions.cpp  TestSignal.cpp  main.cpp
